# rwkv-burn

./: Cargo.toml  Readme.md  weights_to_safetensors.py
src/: generator.rs  main.rs
src/model/: channel_mix.rs  layer.rs  load_from_safetensors.rs  mod.rs  rwkv_v7.rs  time_mix.rs
